--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 
 <head>
-    <title>My first website</title>
+    <title>Shortcut</title>
     <link rel="icon" type="image/jpg" href="images/Azur_lane_icon.jpg">
 </head>
 
 <body>
-    <a href="https://www.youtube.com/watch?v=opnIuvM1aHw" target="_blank">這個連結</a>會連到aya's theme<br>
     <a href="https://www.youtube.com/" target="_blank">這個連結</a>會連到 YouTube<br>
     <a href="https://www.google.com/" target="_blank">這個連結</a>會連到 Google<br>
     <a href="https://www.facebook.com/" target="_blank">這個連結</a>會連到 Facebook<br>
-    
-    <a href="https://www.youtube.com/watch?v=dCEMSaho0io" target="_blank">這個連結</a>會連到奇怪的網站:>
+    <a href="https://discord.com/" target="_blank">這個連結</a>會連到 Discord<br>
+    <a href="https://www.youtube.com/watch?v=opnIuvM1aHw" target="_blank">這個連結</a>會連到 Aya's theme<br>
+    <a href="https://www.youtube.com/watch?v=dCEMSaho0io" target="_blank">這個連結</a>會連到奇怪的網站:><br>
+    <a href="https://www.youtube.com/@usadapekora" target="_blank">這個連結</a>會連到兔兔的YouTube網站<br>
+    <a href="https://www.youtube.com/@Vsauce" target="_blank">這個連結</a>會連到 Wisdom<br>
+    <a href="https://azurlane.yo-star.com/#/" target="_blank">這個連結</a>會連到 Azur Lane<br>
+    <a href="https://www.pixiv.net/" target="_blank">這個連結</a>會連到 Pixiv<br>
+    <br>
+    <p>This website is for testing and for fun only , please don't take this seriously :)</p>
 </body>
 </html>
