--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="https://azurlane.yo-star.com/#/" target="_blank">這個連結</a>會連到 Azur Lane<br>
     <a href="https://www.pixiv.net/" target="_blank">這個連結</a>會連到 Pixiv<br>
     <a href="https://www.facebook.com/photo.php?fbid=1112962363460654&id=100042407035754&set=a.962348035188755" target="_blank">
-    <div style="text-align:center;"><img src="Honkai3rdwifu.png" alt="wifu" title="wifu" height="240"></div>
+    <div style="text-align:center;"><img src="images/螢幕擷取畫面 2024-03-04 113311.png" alt="wifu" title="wifu" height="240"></div>
     </a>
     <p style="size:24; color:black; text-align:center;">
     <b>Good photo BTW</b>
